--- a/DataScience_Topics/padding_Strides_CNN.ipynb
+++ b/DataScience_Topics/padding_Strides_CNN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPbYvGll46gtBcLIKmgDxws",
+      "authorship_tag": "ABX9TyMhFgClRrA0EqvFTamEzTyp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -228,12 +228,93 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Stride Convolutional"
+      ],
+      "metadata": {
+        "id": "LSK9cAFlAYVA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#  padding is same\n",
+        "model = Sequential()\n",
+        "#  32 is number filter/kernel applied \n",
+        "model.add(Conv2D(32,kernel_size=(3,3), padding='same',strides=(2,2), activation='relu',input_shape=(28,28,1 )  ) )\n",
+        "model.add(Conv2D(32,kernel_size=(3,3), padding='same',strides=(2,2), activation='relu') )\n",
+        "model.add(Conv2D(32,kernel_size=(3,3), padding='same',strides=(2,2), activation='relu') )\n",
+        "model.add(Flatten())\n",
+        "\n",
+        "model.add(Dense(128,activation = 'relu'))\n",
+        "model.add(Dense(10,activation = 'softmax'))"
+      ],
+      "metadata": {
+        "id": "_o3eZp7fXafb"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.summary()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vbGDy1xdXy8U",
+        "outputId": "65f9efa5-188b-4945-d6fe-cb6f515474e4"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential_4\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " conv2d_12 (Conv2D)          (None, 14, 14, 32)        320       \n",
+            "                                                                 \n",
+            " conv2d_13 (Conv2D)          (None, 7, 7, 32)          9248      \n",
+            "                                                                 \n",
+            " conv2d_14 (Conv2D)          (None, 4, 4, 32)          9248      \n",
+            "                                                                 \n",
+            " flatten_4 (Flatten)         (None, 512)               0         \n",
+            "                                                                 \n",
+            " dense_8 (Dense)             (None, 128)               65664     \n",
+            "                                                                 \n",
+            " dense_9 (Dense)             (None, 10)                1290      \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 85,770\n",
+            "Trainable params: 85,770\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here we see by applying stride = (2,2) means shift 2 in horizontal and another 2 is shifting in vertical. A feature map size is decreases."
+      ],
+      "metadata": {
+        "id": "MkOPxXFUX3Z0"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "LSK9cAFlAYVA"
+        "id": "KEjAXgUgYKp6"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     }
   ]
