--- a/DataScience_Topics/Projects/Dogs&Cats_classification.ipynb
+++ b/DataScience_Topics/Projects/Dogs&Cats_classification.ipynb
@@ -9,7 +9,7 @@
       ],
       "gpuType": "T4",
       "mount_file_id": "1jStpF3XKdxzvhIbGZs4jsgJu1-2THe76",
-      "authorship_tag": "ABX9TyMeYVuouplwdKeRxAiMoiOn",
+      "authorship_tag": "ABX9TyOw7kJj7eNLPhMkG22rcoW4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "kSMT_Jrsc3vn"
       },
@@ -49,42 +49,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# kaggle  =\"/content/drive/MyDrive/Colab Notebooks/DeepLearn-TopicsTheory-lab/Project/kaggle.json\""
-      ],
-      "metadata": {
-        "id": "KhJ_MSmijoyj"
-      },
-      "execution_count": 3,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# !mkdir -p ~/.kaggle\n",
-        "# !cp kaggle.json ~/.kaggle/"
+        "#  Data_set li\n",
+        "# Dataset - https://www.kaggle.com/datasets/salader/dogs-vs-cats"
       ],
       "metadata": {
         "id": "AVsj_KWsgNld"
       },
-      "execution_count": 4,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "2zfFXGatfZ69"
-      },
-      "execution_count": 4,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "tDn3oJD-QioL"
-      },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -98,16 +69,7 @@
       "metadata": {
         "id": "gqXXYEDyjikv"
       },
-      "execution_count": 5,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "0EEyLeqbdlce"
-      },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -119,7 +81,7 @@
       "metadata": {
         "id": "iumUqwTvexre"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,7 +106,7 @@
       "metadata": {
         "id": "eZCgu35OsQLq"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -163,7 +125,7 @@
         },
         "outputId": "4ce22369-dbd5-48bd-d51f-e267199a600e"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,7 +163,7 @@
       "metadata": {
         "id": "Vhm4NyX2sQqG"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -217,7 +179,7 @@
         },
         "outputId": "b4cd4920-7f8a-434d-b422-deb5803edb8d"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,7 +229,7 @@
         },
         "outputId": "1a7737e6-3d79-453f-8bee-3e6eedec471a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -292,7 +254,7 @@
       "metadata": {
         "id": "-P8YvFiusQ0x"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -350,7 +312,7 @@
         },
         "outputId": "f57617fc-08d1-4ef0-d895-3ae5fa3b5ecc"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,7 +375,7 @@
       "metadata": {
         "id": "9xLxpgMWsQ5u"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -428,7 +390,7 @@
         },
         "outputId": "9065458b-f701-4052-d513-c8815f062caa"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -479,7 +441,7 @@
         },
         "outputId": "6435b10d-74fa-41c8-dd56-609c96d5198a"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -513,7 +475,7 @@
         },
         "outputId": "c71f1fc4-18a8-467e-b981-03eed86f7063"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -543,7 +505,7 @@
         "id": "8BmFxhlkknLg",
         "outputId": "64f3a13b-0a34-4d8e-fc98-a67f11ddeff0"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -575,7 +537,7 @@
       "metadata": {
         "id": "aaR6iV65sRFX"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -593,7 +555,7 @@
         },
         "outputId": "e310a5e0-7aa6-475a-828f-5e706ed1a8b0"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -629,7 +591,7 @@
         },
         "outputId": "2432c06a-bfdc-4df0-e166-8a690b5d2376"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -652,7 +614,7 @@
       "metadata": {
         "id": "xzYQpq0hm16b"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -678,7 +640,7 @@
         "id": "0l1ZWKh8m2RM",
         "outputId": "2d7a2417-1af9-431b-bd29-5df1f218e543"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -736,7 +698,7 @@
         "id": "Orid6-qLs8BM",
         "outputId": "d529a2b6-0291-4fdc-8341-236e4a8ed5be"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -776,6 +738,22 @@
       ],
       "metadata": {
         "id": "gk98zyUas8O_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "1y8Jz2nexcpq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Output is 1 means it is Dog"
+      ],
+      "metadata": {
+        "id": "hxUdX7j4yDBE"
       }
     }
   ]
