Histogram Documentation Link Added update

--- a/cv2_freecode/section2/#5Histogram_.ipynb
+++ b/cv2_freecode/section2/#5Histogram_.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1lFWjesGC5nX1qNP9XIbUX0S2B1e3Lw2W",
-      "authorship_tag": "ABX9TyNrgeWHmc/gH5Kl8OHICOtQ",
+      "authorship_tag": "ABX9TyN/frYnWgR+DuPmWpcdFGmN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -329,13 +329,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "[Documentation to read on opencv histogram](https://docs.opencv.org/3.4/d1/db7/tutorial_py_histogram_begins.html)"
+      ],
       "metadata": {
         "id": "WpKKTrUvDzt8"
-      },
-      "execution_count": 21,
-      "outputs": []
+      }
     },
     {
       "cell_type": "code",
