--- a/Coursera_course/#C2-Convolutional_Neural_Network/Week_2-material/Data_augmentation_CatVsDog_Lab1.ipynb
+++ b/Coursera_course/#C2-Convolutional_Neural_Network/Week_2-material/Data_augmentation_CatVsDog_Lab1.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/vis-hal-k/Data_science_self-Practice/blob/main/Coursera_course/%23C2-Convolutional_Neural_Network/Week_2-material/Data_augmentation_CatVsDog_Lab1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Vig5POsIVoh7"
       },
       "source": [
@@ -373,7 +383,8 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
